plugins/binding/capi/include/TellusimCMath.h

typedef struct TSVector3f {
	union {
		struct {
			float32_t x, y, z;
		};
		struct {
			TSVector2f xy;
			float32_t xy_z;
		};
		float32_t v[3];
	};
} TSVector3f;
typedef struct TSVector3d {
	union {
		struct {
			float64_t x, y, z;
		};
		struct {
			TSVector2d xy;
			float64_t xy_z;
		};
		float64_t v[3];
	};
} TSVector3d;
TS_CAPI TSVector3f* TS_CCALL tsVector3f_abs(TSVector3f *ret, const TSVector3f *v);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_abs(TSVector3d *ret, const TSVector3d *v);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_neg(TSVector3f *ret, const TSVector3f *v);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_neg(TSVector3d *ret, const TSVector3d *v);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_mul1(TSVector3f *ret, const TSVector3f *v0, float32_t v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_mul1(TSVector3d *ret, const TSVector3d *v0, float64_t v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_div1(TSVector3f *ret, const TSVector3f *v0, float32_t v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_div1(TSVector3d *ret, const TSVector3d *v0, float64_t v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_add1(TSVector3f *ret, const TSVector3f *v0, float32_t v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_add1(TSVector3d *ret, const TSVector3d *v0, float64_t v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_sub1(TSVector3f *ret, const TSVector3f *v0, float32_t v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_sub1(TSVector3d *ret, const TSVector3d *v0, float64_t v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_mul(TSVector3f *ret, const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_mul(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_div(TSVector3f *ret, const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_div(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_add(TSVector3f *ret, const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_add(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_sub(TSVector3f *ret, const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_sub(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_min(TSVector3f *ret, const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_min(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_max(TSVector3f *ret, const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_max(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_clamp(TSVector3f *ret, const TSVector3f *v, const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_clamp(TSVector3d *ret, const TSVector3d *v, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_saturate(TSVector3f *ret, const TSVector3f *v);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_saturate(TSVector3d *ret, const TSVector3d *v);
TS_CAPI float32_t TS_CCALL tsVector3f_dot(const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI float64_t TS_CCALL tsVector3d_dot(const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_cross(TSVector3f *ret, const TSVector3f *v0, const TSVector3f *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_cross(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI float32_t TS_CCALL tsVector3f_length(const TSVector3f *v);
TS_CAPI float64_t TS_CCALL tsVector3d_length(const TSVector3d *v);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_normalize(TSVector3f *ret, const TSVector3f *v);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_normalize(TSVector3d *ret, const TSVector3d *v);
TS_CAPI TSVector3f* TS_CCALL tsVector3f_lerp(TSVector3f *ret, const TSVector3f *v0, const TSVector3f *v1, float32_t k);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_lerp(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1, float64_t k);