plugins/binding/swift/include/TellusimObjCMath.h

typedef struct TSVector2d {
	union {
		struct {
			float64_t x, y;
		};
		float64_t v[2];
	};
} TSVector2d;
typedef TSVector2d Vector2d;
/*****************************************************************************\
 *
 * Vector3
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector3i {
	union {
		struct {
			int32_t x, y, z;
		};
		struct {
			TSVector2i xy;
			int32_t xy_z;
		};
		int32_t v[3];
	};
} TSVector3i;
typedef struct TSVector3u {
	union {
		struct {
			uint32_t x, y, z;
		};
		struct {
			TSVector2u xy;
			uint32_t xy_z;
		};
		uint32_t v[3];
	};
} TSVector3u;
/*
 */
typedef TSVector3i Vector3i;
typedef TSVector3u Vector3u;
typedef TSVector3f Vector3f;
typedef TSVector3d Vector3d;
/*
 */
typedef TSVector4i Vector4i;
typedef TSVector4d Vector4d;