plugins/binding/csharp/source/TellusimCSMath.cs

		
		public static Vector3f operator*(in Vector3f v0, float v1) { Vector3f ret = new Vector3f(); tsVector3f_mul1(ref ret, in v0, v1); return ret; }
		public static Vector3f operator/(in Vector3f v0, float v1) { Vector3f ret = new Vector3f(); tsVector3f_div1(ref ret, in v0, v1); return ret; }
		public static Vector3f operator+(in Vector3f v0, float v1) { Vector3f ret = new Vector3f(); tsVector3f_add1(ref ret, in v0, v1); return ret; }
		public static Vector3f operator-(in Vector3f v0, float v1) { Vector3f ret = new Vector3f(); tsVector3f_sub1(ref ret, in v0, v1); return ret; }
		
		public static Vector3f operator*(in Vector3f v0, in Vector3f v1) { Vector3f ret = new Vector3f(); tsVector3f_mul(ref ret, in v0, in v1); return ret; }
		public static Vector3f operator/(in Vector3f v0, in Vector3f v1) { Vector3f ret = new Vector3f(); tsVector3f_div(ref ret, in v0, in v1); return ret; }
		public static Vector3f operator+(in Vector3f v0, in Vector3f v1) { Vector3f ret = new Vector3f(); tsVector3f_add(ref ret, in v0, in v1); return ret; }
		public static Vector3f operator-(in Vector3f v0, in Vector3f v1) { Vector3f ret = new Vector3f(); tsVector3f_sub(ref ret, in v0, in v1); return ret; }
		
		public Vector3f abs() { Vector3f ret = new Vector3f(); tsVector3f_abs(ref ret, in this); return ret; }
		
		public static Vector3f min(in Vector3f v0, in Vector3f v1) { Vector3f ret = new Vector3f(); tsVector3f_min(ref ret, in v0, in v1); return ret; }
		public static Vector3f max(in Vector3f v0, in Vector3f v1) { Vector3f ret = new Vector3f(); tsVector3f_max(ref ret, in v0, in v1); return ret; }
		
		public Vector3f clamp(in Vector3f v0, in Vector3f v1) { Vector3f ret = new Vector3f(); tsVector3f_clamp(ref ret, in this, in v0, in v1); return ret; }
		public Vector3f saturate() { Vector3f ret = new Vector3f(); tsVector3f_saturate(ref ret, in this); return ret; }
		
		public static float dot(in Vector3f v0, in Vector3f v1) { return tsVector3f_dot(in v0, in v1); }
		public static Vector3f cross(in Vector3f v0, in Vector3f v1) { Vector3f ret = new Vector3f(); tsVector3f_cross(ref ret, in v0, in v1); return ret; }
		
		public float length() { return tsVector3f_length(in this); }
		public Vector3f normalize() { Vector3f ret = new Vector3f(); tsVector3f_normalize(ref ret, in this); return ret; }
		
		public static Vector3f lerp(in Vector3f v0, in Vector3f v1, float k) { Vector3f ret = new Vector3f(); tsVector3f_lerp(ref ret, in v0, in v1, k); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2})", x, y, z); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_abs(ref Vector3f ret, in Vector3f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_neg(ref Vector3f ret, in Vector3f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_mul1(ref Vector3f ret, in Vector3f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_div1(ref Vector3f ret, in Vector3f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_add1(ref Vector3f ret, in Vector3f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_sub1(ref Vector3f ret, in Vector3f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_mul(ref Vector3f ret, in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_div(ref Vector3f ret, in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_add(ref Vector3f ret, in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_sub(ref Vector3f ret, in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_min(ref Vector3f ret, in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_max(ref Vector3f ret, in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_clamp(ref Vector3f ret, in Vector3f v, in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_saturate(ref Vector3f ret, in Vector3f v);
		[DllImport(Base.Import)] private static extern float tsVector3f_dot(in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_cross(ref Vector3f ret, in Vector3f v0, in Vector3f v1);
		[DllImport(Base.Import)] private static extern float tsVector3f_length(in Vector3f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_normalize(ref Vector3f ret, in Vector3f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3f_lerp(ref Vector3f ret, in Vector3f v0, in Vector3f v1, float k);
		
		public static readonly Vector3f zero = new Vector3f(0.0f);
		public static readonly Vector3f oneX = new Vector3f(1.0f, 0.0f, 0.0f);
		public static readonly Vector3f oneY = new Vector3f(0.0f, 1.0f, 0.0f);
		public static readonly Vector3f oneZ = new Vector3f(0.0f, 0.0f, 1.0f);
		public static readonly Vector3f one = new Vector3f(1.0f);
		
		public float x, y, z;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Vector3d {
		
		public Vector3d(double v) { x = v; y = v; z = v; }
		public Vector3d(double x, double y, double z) { this.x = x; this.y = y; this.z = z; }
		public Vector3d(in Vector2d v, double z) { x = v.x; y = v.y; this.z = z; }
		public Vector3d(in Vector3d v) { x = v.x; y = v.y; z = v.z; }
		public Vector3d(in Vector4d v) { x = v.x; y = v.y; z = v.z; }
		public Vector3d(in Vector3i v) { x = (double)v.x; y = (double)v.y; z = (double)v.z; }
		public Vector3d(in Vector3u v) { x = (double)v.x; y = (double)v.y; z = (double)v.z; }
		public Vector3d(in Vector3f v) { x = (double)v.x; y = (double)v.y; z = (double)v.z; }
		public Vector3d(in double[] v) { x = v[0]; y = v[1]; z = v[2]; }
		
		public static Vector3d operator-(in Vector3d v) { Vector3d ret = new Vector3d(); tsVector3d_neg(ref ret, in v); return ret; }
		
		public static Vector3d operator*(in Vector3d v0, double v1) { Vector3d ret = new Vector3d(); tsVector3d_mul1(ref ret, in v0, v1); return ret; }
		public static Vector3d operator/(in Vector3d v0, double v1) { Vector3d ret = new Vector3d(); tsVector3d_div1(ref ret, in v0, v1); return ret; }
		public static Vector3d operator+(in Vector3d v0, double v1) { Vector3d ret = new Vector3d(); tsVector3d_add1(ref ret, in v0, v1); return ret; }
		public static Vector3d operator-(in Vector3d v0, double v1) { Vector3d ret = new Vector3d(); tsVector3d_sub1(ref ret, in v0, v1); return ret; }
		
		public static Vector3d operator*(in Vector3d v0, in Vector3d v1) { Vector3d ret = new Vector3d(); tsVector3d_mul(ref ret, in v0, in v1); return ret; }
		public static Vector3d operator/(in Vector3d v0, in Vector3d v1) { Vector3d ret = new Vector3d(); tsVector3d_div(ref ret, in v0, in v1); return ret; }
		public static Vector3d operator+(in Vector3d v0, in Vector3d v1) { Vector3d ret = new Vector3d(); tsVector3d_add(ref ret, in v0, in v1); return ret; }
		public static Vector3d operator-(in Vector3d v0, in Vector3d v1) { Vector3d ret = new Vector3d(); tsVector3d_sub(ref ret, in v0, in v1); return ret; }
		
		public Vector3d abs() { Vector3d ret = new Vector3d(); tsVector3d_abs(ref ret, in this); return ret; }
		
		public static Vector3d min(in Vector3d v0, in Vector3d v1) { Vector3d ret = new Vector3d(); tsVector3d_min(ref ret, in v0, in v1); return ret; }
		public static Vector3d max(in Vector3d v0, in Vector3d v1) { Vector3d ret = new Vector3d(); tsVector3d_max(ref ret, in v0, in v1); return ret; }
		
		public Vector3d clamp(in Vector3d v0, in Vector3d v1) { Vector3d ret = new Vector3d(); tsVector3d_clamp(ref ret, in this, in v0, in v1); return ret; }
		public Vector3d saturate() { Vector3d ret = new Vector3d(); tsVector3d_saturate(ref ret, in this); return ret; }
		
		public static double dot(in Vector3d v0, in Vector3d v1) { return tsVector3d_dot(in v0, in v1); }
		public static Vector3d cross(in Vector3d v0, in Vector3d v1) { Vector3d ret = new Vector3d(); tsVector3d_cross(ref ret, in v0, in v1); return ret; }
		
		public double length() { return tsVector3d_length(in this); }
		public Vector3d normalize(Vector3d v) { Vector3d ret = new Vector3d(); tsVector3d_normalize(ref ret, in this); return ret; }
		
		public static Vector3d lerp(in Vector3d v0, in Vector3d v1, double k) { Vector3d ret = new Vector3d(); tsVector3d_lerp(ref ret, in v0, in v1, k); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2})", x, y, z); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_abs(ref Vector3d ret, in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_neg(ref Vector3d ret, in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_mul1(ref Vector3d ret, in Vector3d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_div1(ref Vector3d ret, in Vector3d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_add1(ref Vector3d ret, in Vector3d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_sub1(ref Vector3d ret, in Vector3d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_mul(ref Vector3d ret, in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_div(ref Vector3d ret, in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_add(ref Vector3d ret, in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_sub(ref Vector3d ret, in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_min(ref Vector3d ret, in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_max(ref Vector3d ret, in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_clamp(ref Vector3d ret, in Vector3d v, in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_saturate(ref Vector3d ret, in Vector3d v);
		[DllImport(Base.Import)] private static extern double tsVector3d_dot(in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_cross(ref Vector3d ret, in Vector3d v0, in Vector3d v1);
		[DllImport(Base.Import)] private static extern double tsVector3d_length(in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_normalize(ref Vector3d ret, in Vector3d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3d_lerp(ref Vector3d ret, in Vector3d v0, in Vector3d v1, double k);
		
		public static readonly Vector3d zero = new Vector3d(0.0);
		public static readonly Vector3d oneX = new Vector3d(1.0, 0.0, 0.0);
		public static readonly Vector3d oneY = new Vector3d(0.0, 1.0, 0.0);
		public static readonly Vector3d oneZ = new Vector3d(0.0, 0.0, 1.0);
		public static readonly Vector3d one = new Vector3d(1.0);
		
		public double x, y, z;
	}
	
	/*****************************************************************************\
	 *
	 * Vector4
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential, Pack=16)]
	public struct Vector4i {
